# Caller-Modpath-Aggregator

./: .gitignore  Cargo.toml  README.md
caller_modpath/: Cargo.toml
caller_modpath_aggregator_functions/: Cargo.toml
caller_modpath_aggregator_functions/src/: lib.rs
caller_modpath_aggregator_macros/: Cargo.toml
caller_modpath_aggregator_macros/src/: lib.rs
caller_modpath_macros/src/: lib.rs
src/: lib.rs
