[package]
name = "caller_modpath_aggregator_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies.quote]
version = "1.0.6"

[dependencies.syn]
version = "1.0.23"
features = ["full"]

[dependencies.caller_modpath_aggregator_functions]
path = "../caller_modpath_aggregator_functions"